# x11_gl_example

./: .clang-format  .clangd  .gitignore  Makefile  app  build.c  compile_flags.txt  format.sh  main.c  meson.build  meson_options.txt  readme.md  shader.frag  shader.vert
src/: base.h  build.c  main.c
src/log/: log.c  log.h
src/mem/: arena.c  arena.h  list.c  list.h
src/render/gl/: shader.c  shader.h
src/window/: gl_ctx.c  gl_ctx.h  window.h  xcb_window.c  xlib_window.c
